--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <div class = "container">
         <h1>Título Principal</h1>
+            <div class = "subtitulo">
+                <h1>Título Principal</h1>
     </div>
 
 
